= 5.0.5 = * Updated: Design your store page updated * Fixed: A few non-critical admin text were not the correct color and were hard to read.  Fixed this. * Updated: Admin menu edited * Updated: USPS broken, so hiding it until it is fixed
git-svn-id: https://plugins.svn.wordpress.org/wpstorecart/trunk@1080162 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/wpstorecart/admin/css/layout_mp6.css
+++ b/wpstorecart/admin/css/layout_mp6.css
@@ -53,6 +53,14 @@ h2#page-heading {
 	color:#000;	
 }
 
+.dark-text {
+    color:#000;
+}
+
+.light-text {
+    color:#FFF;
+}
+
 h2.page-heading-left{
 	font-weight:bold;
 	padding:.3em;
